<resources>
    <string name="app_name">DevIntensive App</string>
    <string name="counter_tv">5</string>
    <string name="rating_tv">Рейтинг</string>
    <string name="code_lines_counts_tv">Написано строк кода</string>
    <string name="project_counts_tv">Проектов</string>
    <string name="mobile_et">Мобильный</string>
    <string name="mobile_number_et">+7(978)000-00-00</string>
    <string name="email_hint_et">E-mail</string>
    <string name="email_et">example@example.com</string>
    <string name="email_send_et">Отправка E-mail</string>
    <string name="vk_et">ВКонтакте</string>
    <string name="about_et">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="user_profile.placeholder.image">Изменить фотографию профиля</string>
    <string name="user_profile_dialog_gallery">загрузить из галлереи</string>
    <string name="user_profile_dialog_camera">сделать снимок</string>
    <string name="user_profile_dialog_cancel">Отмена</string>
    <string name="user_profile_dialog_title">Изменить фотографию профиля</string>
    <string name="user_profile_choose_message">выберите фото</string>
    <string name="message_allow">Разрешить</string>
    <string name="message_permission_needed">Для корректной работы приложения необходимо дать требуемые разрешения</string>
    <string name="login_text">ВОЙТИ</string>
    <string name="password_lost">Забыли пароль?</string>
    <string name="password_hint">Пароль</string>
    <string name="message_choose_browser">Выберите броузер для просмотра ссылки</string>
    <string name="message_choose_email">Выберите почтовую программу для отправки письма</string>
    <string name="email_subject">Message from app: </string>
    <string name="email_body">Тестовое сообщение</string>
    <string name="no_email_programms_installed">Почтовые программы не установлены</string>
    <string name="user_info_saved_message">данные пользователя сохранены</string>
    <string name="user_info_loaded_message">данные пользователя загружены</string>
    <string name="error_user_info_save_message">ошибочные данные пользователя не сохранены</string>
    <string name="error_url_message">Неправильный адрес сайта</string>
    <string name="error_email_message">Неправильный адрес email</string>
    <string name="error_phone_message">Неправильный номер телефона</string>
    <string name="ff_medium">sans-serif-medium</string>
    <string name="ff_regular">sans-serif-condensed</string>
    <string name="error_login_or_password">неверный логин или пароль</string>
    <string name="error_unknown">неизвестная ошибка входа</string>
    <string name="error_network_is_not_available">сеть недоступна, попробуйте позже</string>
    <string name="success_photo_update_message">фотография профиля успешно обновлена</string>
    <string name="error_photo_update_message">ошибка загрузки фото на сервер (404)</string>
    <string name="error_token_message">сохраненные данны входа устарели, войдите с паролем</string>
    <string name="success_token_message">сохраненные логин и токен действительны</string>
    <string name="my_profile_mi">Мой профиль</string>
    <string name="my_team_im">Команда</string>
    <string name="clear_credentials">Выйти из профиля</string>
    <string name="profile_view_btn">Просмотр профиля</string>
    <string name="error_not_found">ресурс не найден</string>
    <string name="error_null_pointer">ошибка указателя</string>
    <string name="hint_search">Поиск пользователя</string>
    <string name="error_user_list_receive">список пользователей не может быть получен</string>
    <string name="search_enter_user_name">Введите имя пользователя</string>
    <string name="exit_menu">Выход</string>
    <string name="error_users_list_empty">список пользователей пуст</string>
    <string name="users_list_loading_message">загружаем пользователей...</string>
    <string name="error_credintials_not_found_message">не найдены данные для входа, войдите с паролем</string>
    <string name="error_internal_message">внутренняя ошибка загрузки пользователя</string>
    <string name="success_user_list_load">список пользователей успешно загружен</string>
    <string name="connecting_to_server_message">соединяемся с сервером...</string>
    <string name="error_credintials_empty_message">логин или пароль не могут быть пустыми</string>
    <string name="success_login_message">логин и пароль подошли</string>
    <string name="for_developers_only"></string>
    <string name="token_deleted_message">токен удален</string>
    <string name="user_profile_image_file_error">путь к изображению не существует</string>
    <string name="button_undo">Отменить</string>
    <string name="camera_permission_granted">использование камеры разрешено</string>
    <string name="gallery_permission_granted">использование галлереи изображений разрешено</string>
    <string name="user_deleted_from_list">Пользователь %1$s\n удален из списка. Для окончательного удаления еще раз проведите пальцем.</string>
    <string name="revert"><u>Восстановить</u></string>
    <string name="error_load_photo_from_network">невозможно загрузить фото с сети :</string>
    <string name="success_photo_loaded_from_network">фото загружено из сети :</string>
    <string name="error_load_photo_from_cache">невозможно загрузить фото из кеша :</string>
    <string name="success_photo_loaded_from_cache">фото взято с кеша :</string>
    <string name="no_photo_assigned">"фотография не установлена :"</string>
    <string name="gallery_image_mode_choosen">выбрана загрузка из галлереи</string>
    <string name="camera_image_mode_choosen">выбрана загрузка с камеры</string>
    <string name="btn_yes">Да</string>
    <string name="btn_no">Нет</string>
    <string name="btn_cancel">Отменить</string>
    <string name="btn_cancel_remove">Отменить удаление</string>
    <string name="success_like_message">успешно поставили лайк</string>
    <string name="success_unlike_message">успешно сняли лайк</string>
    <string name="fio_placeholder">Фамилия Имя</string>
    <string name="zero">0</string>
    <string name="likes_count_tv">счетчик лайков</string>
    <string name="my_like_img">мой лайк</string>
    <plurals name="likes_count">
        <item quantity="zero">нет лайков</item>
        <item quantity="one">%1$d лайк</item>
        <item quantity="two">%1$d лайка</item>
        <item quantity="few">%1$d лайка</item>
        <item quantity="many">%1$d лайков</item>
        <item quantity="other">%1$d лайков</item>
    </plurals>
</resources>
