<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:paddingBottom="@dimen/spacing_medium_32"
    android:paddingLeft="@dimen/spacing_medium_32"
    android:paddingRight="@dimen/spacing_medium_32"
    android:gravity="center"
    tools:context="com.softdesign.devintensive.ui.activities.AuthActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f9f9f9"
        android:orientation="vertical"
        android:paddingBottom="@dimen/spacing_medial_24"
        android:paddingTop="@dimen/spacing_medial_24"
        android:layout_marginLeft="@dimen/spacing_medial_24"
        android:layout_marginRight="@dimen/spacing_medial_24"
        android:elevation="@dimen/spacing_normal_16">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <View
                android:id="@+id/left_block"
                android:layout_width="5dp"
                android:layout_height="@dimen/spacing_medial_24"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:background="@color/login_text_red"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_medial_24"
                android:layout_marginRight="@dimen/spacing_medial_24"
                android:layout_alignBottom="@id/left_block"
                android:fontFamily="sans-serif-medium"
                android:text="@string/login_text"
                android:textColor="@color/login_text_red"
                android:textSize="16sp"/>
        </RelativeLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_medial_24"
            android:layout_marginRight="@dimen/spacing_medial_24"
            android:layout_marginTop="@dimen/spacing_normal_16"
            android:fontFamily="sans-serif-condensed"
            android:hint="@string/email_hint_et"
            android:textColorHint="@color/grey_light">
            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:focusable="true"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/grey"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_medial_24"
            android:layout_marginRight="@dimen/spacing_medial_24"
            android:fontFamily="sans-serif-condensed"
            android:textColorHint="@color/grey_light">
            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/password_hint"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_normal_16"
            android:layout_marginTop="@dimen/spacing_normal_16"
            android:background="@color/login_text_red"
            android:text="@string/login_text"
            android:layout_gravity="center"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/password_lost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/password_lost"
            android:textColor="@color/grey_light"/>
    </LinearLayout>
</RelativeLayout>